# damn-vulnerable-web-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  authentication.cpp  authentication.h  base64.cpp  base64.h  error_handling.cpp  error_handling.h  main.cpp  mime_type_handler.cpp  mime_type_handler.h  request_logger.cpp  request_logger.h  response_handler.cpp  response_handler.h  session_manager.cpp  session_manager.h  utils.cpp  utils.h
serve/: index.html
